--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/MajaCvitanic/MyChatApp/issues"
   },
-  "homepage": "https://github.com/MajaCvitanic/MyChatApp#readme",
+  "homepage": "https://github.com/MajaCvitanic/MyChatApp",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
